# draftkit

./: .gitignore  .justfile  AGENTS.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  cog.toml  deny.toml  rust-toolchain.toml
.cargo/: config.toml
.claude/rules/: commit-messages.md  rust-dev-guidelines.md
.claude/skills/tailwind-source-analysis/: SKILL.md
.claude/skills/tailwind-source-analysis/reference/: theme-v3-values.md  theme-v4-values.md  utility-mappings-v3.md  utility-mappings-v4.md
.github/workflows/: benchmarks.yml  bump.yml  ci.yml
crates/draftkit/: Cargo.toml
crates/draftkit-core/: Cargo.toml  cache
crates/draftkit-core/benches/: benchmarks.kdl  divan_benchmarks.rs  gungraun_benchmarks.rs
crates/draftkit-core/examples/: analyze_pages.rs  analyze_template.rs  site_recommendation.rs
crates/draftkit-core/src/: cache.rs  catalog.rs  catalyst.rs  config.rs  data_dir.rs  docs.rs  elements.rs  error.rs  fetch.rs  lib.rs  manifest.rs
crates/draftkit-core/src/components/: mod.rs  reader.rs  types.rs
crates/draftkit-core/src/intelligence/: coherence.rs  component_matcher.rs  intelligence_writer.rs  matcher.rs  mod.rs  page_analyzer.rs  site_intelligence.rs  style_extractor.rs  template_analyzer.rs
crates/draftkit-core/src/patterns/: loader.rs  mod.rs  schema.rs
crates/draftkit-core/src/preset/: loader.rs  mod.rs  schema.rs
crates/draftkit-core/src/preview/: cache.rs  composite.rs  error.rs  mod.rs  rendered.rs
crates/draftkit-core/src/scaffold/: framework.rs  generator.rs  mod.rs  package_manager.rs  templates.rs
crates/draftkit-core/src/scaffold/templates/vite-react/: package.json.tmpl
crates/draftkit-core/src/scaffold/templates/vite-react/src/: App.tsx.tmpl
crates/draftkit/src/: cli.rs  lib.rs  main.rs  observability.rs  server.rs
crates/draftkit/src/commands/: auth.rs  cache.rs  generate.rs  info.rs  init.rs  mod.rs  presets.rs  serve.rs
crates/draftkit/tests/: mcp_server.rs
docs/: README.md  benchmarks-howto.md
docs/tailwind-v3/: README.md  accessibility.md  backgrounds.md  borders.md  colors.md  dark-mode.md  display.md  effects.md  filters.md  flexbox.md  forms.md  grid.md  index.md  interactivity.md  position.md  prose.md  responsive.md  sizing.md  spacing.md  states.md  svg.md  transforms.md  transitions.md  typography.md
docs/tailwind-v4/: README.md  accessibility.md  backgrounds.md  borders.md  colors.md  dark-mode.md  display.md  effects.md  filters.md  flexbox.md  forms.md  grid.md  index.md  interactivity.md  position.md  prose.md  responsive.md  sizing.md  spacing.md  states.md  svg.md  transforms.md  transitions.md  typography.md  v4-changes.md
scripts/: README.md  bench-cli.sh  inertia-version.sh  metadata.sh  tailwindplus-auth.sh  tailwindplus-collector.sh
xtask/: Cargo.toml
xtask/src/: main.rs
xtask/src/commands/: completions.rs  gen_benchmarks.rs  gen_embeddings.rs  install.rs  man.rs  mod.rs
