[workspace]
members = ["xtask", "crates/*"]
default-members = ["crates/*"]
resolver = "2"

[workspace.package]
edition = "2024"
license = "MIT OR Apache-2.0"
version = "0.1.0"
# version we want to allow
rust-version = "1.88.0"
readme = "README.md"
authors = ["Clay Loveless <clay@lovelesslabs.com>"]
repository = "https://github.com/lovelesslabs/draftkit"
homepage = "https://github.com/lovelesslabs/draftkit"
documentation = "https://docs.rs/draftkit"
description = "MCP server for Tailwind Plus members."
keywords = []
categories = []

[workspace.lints.rust]
# Use "deny" instead of "forbid" to allow benchmark harnesses to override
# when their instrumentation machinery requires it (e.g., gungraun's FFI exports)
unsafe_code = "deny"

[workspace.lints.clippy]
all = "warn"
nursery = "warn"

# Optimize dependencies in dev mode for faster tests
# (keeps main crate unoptimized for fast incremental builds)
# don't emit debuginfo for *dependencies* in dev builds
[profile.dev.package."*"]
debug = 0
opt-level = 1

[profile.dev.build-override]
debug = 0
opt-level = 1

# Reduce debug info size (line tables only, no variable info)
# Light optimization for better runtime without killing incremental builds
[profile.dev]
debug = "line-tables-only"
opt-level = 1
# On macOS, keep debug info from exploding into huge scattered dSYM trees
split-debuginfo = "packed"
incremental = false

[profile.test]
inherits = "dev"

[profile.test.package."*"]
debug = 0
opt-level = 1

[profile.test.build-override]
debug = 0
opt-level = 1

# Release profile with reduced debug info for smaller binaries
[profile.release]
debug = "line-tables-only"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

# Debug-friendly profile for investigating mysteries (hangs, crashes, etc.)
# Usage: cargo build --profile mystery
[profile.mystery]
inherits = "release"
opt-level = 1
debug = true
strip = false
# Optimized profile for benchmarks
[profile.bench]
inherits = "release"
lto = "thin"
debug = "line-tables-only"

# Config for 'dist'
[workspace.metadata.dist]
# The preferred dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.30.3"
# CI backends to support
ci = ["github"]
# The installers to generate for each app
installers = ["homebrew"]
# Target platforms to build apps for (Rust target-triple syntax)
targets = [
  "x86_64-unknown-linux-gnu",
  "aarch64-unknown-linux-gnu",
  "x86_64-apple-darwin",
  "x86_64-pc-windows-msvc",
  "aarch64-apple-darwin",
]
tap = "{{owner}}/homebrew-brew"
publish-jobs = ["homebrew"]
# Extra static files to include in each App (path relative to this Cargo.toml's dir)
include = ["dist/share"]
github-build-setup = "../dist-build-setup.yml"
# Which actions to run on pull requests
pr-run-mode = "plan"

# cog creates the release on github
create-release = false

# Whether to embed dependency information using cargo-auditable
cargo-auditable = true
# Software Bill of Materials. Nice to have.
cargo-cyclonedx = true

[workspace.metadata.dist.github-action-commits]
"actions/checkout" = "v6"
"actions/upload-artifact" = "v6"
"actions/download-artifact" = "v7"
