[package]
name = "xtask"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false
repository.workspace = true
homepage.workspace = true

[dependencies]
clap = { version = "4.5", features = ["derive"] }
clap_complete = "4.5"
clap_mangen = "0.2.31"
kdl = "4"
draftkit = { path = "../crates/draftkit" }

# for generate-embeddings tool

# Candle for embedding model inference
candle-core = { version = "0.9.2-alpha.1", features = ["accelerate"] }
candle-nn = { version = "0.9.2-alpha.1", features = ["accelerate"] }
candle-transformers = { version = "0.9.2-alpha.1", features = ["accelerate"] }

# HuggingFace Hub for model download
hf-hub = { version = "0.4.3", features = ["tokio"] }

# Tokenizer
tokenizers = { version = "0.20", default-features = false, features = ["onig"] }

# SQLite with sqlite_vec
rusqlite = { version = "0.32", features = ["bundled"] }
sqlite-vec = "0.1"

# Async runtime
tokio = { version = "1", features = ["rt-multi-thread", "macros", "fs"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Error handling
anyhow = "1"

# Progress bar
indicatif = "0.17"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
