[package]
name = "draftkit-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
description = "Core library for draftkit"
repository.workspace = true
homepage.workspace = true
readme.workspace = true
exclude = [
    # Workspace-level files (/ = workspace root)
    "/.claude/",
    "/.github/",
    "/AGENTS.md",
    "/.justfile",
    "/.editorconfig",
    "/.markdownlint.yaml",
    "/.yamllint",
    "/.envrc",
    "/.env",
    "/.env.rust",
    "/bench-reports/",
    "/scripts/",
    "/docs/",
    "/cog.toml",
    "/deny.toml",
    "/cargo-generate.toml",
    # Example config files
    "/*.example",
]

[dependencies]
camino = { version = "1.1", features = ["serde1"] }
config = "0.15"
dirs = "6.0"
include_dir = "0.7.4"
reqwest = { version = "0.13.1", features = ["cookies", "json"] }
schemars = { version = "1.2.0", optional = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.149"
thiserror = "2.0"
toml = { version = "0.9.11", features = ["preserve_order"] }
urlencoding = "2.1.3"

[dev-dependencies]
tempfile = "3.20"
divan = "0.1"
gungraun = "0.17"

[lints]
workspace = true

[[bench]]
name = "divan_benchmarks"
harness = false

[[bench]]
name = "gungraun_benchmarks"
harness = false

[features]
default = ["embedded-data"]
embedded-data = []
schema = ["dep:schemars"]

